RESOLVED FIXED297049
[WebGPU] Fix webGpuSwift build
https://bugs.webkit.org/show_bug.cgi?id=297049
Summary [WebGPU] Fix webGpuSwift build
Tadeu Zagallo
Reported 2025-08-07 04:00:25 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-07 04:04:45 PDT
Tadeu Zagallo
Comment 2 2025-08-07 04:32:47 PDT
EWS
Comment 3 2025-08-08 07:42:31 PDT
Committed 298391@main (6207d8e92a61): <https://commits.webkit.org/298391@main> Reviewed commits have been landed. Closing PR #49056 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.