[WebGPU] Fix the webGpuSwift build https://bugs.webkit.org/show_bug.cgi?id=297049 rdar://157741213

Reviewed by Mike Wyrzykowski.

There were 2 issues:
- A recent change to QuerySet::counterSampleBuffer made it [[noreturn]], so the
  Swift code needed to be updated to use the new function.
- Some symbols that should not be exported (s_heapSpec from CommandBuffer, RenderPassEncoder
  and ComputePassEncoder) were causing build errors, so they needed to be unexported

* Source/WebGPU/Configurations/WebGPU.xcconfig:
* Source/WebGPU/WebGPU/CommandEncoder.swift:
(WebGPU.beginRenderPass(_:)):
(WebGPU.beginComputePass(_:)):
* Source/WebGPU/WebGPU/QuerySet.h:
* Source/WebGPU/WebGPU/QuerySet.mm:
(WebGPU::Device::createQuerySet):
(WebGPU::QuerySet::counterSampleBufferWithOffsetForDevice):
(WebGPU::QuerySet::counterSampleBufferWithOffset): Deleted.

Canonical link: https://commits.webkit.org/298391@main