Source/WebGPU/WebGPU/QuerySet.h
@@ -80,13 +80,13 @@ public:
     uint32_t count() const { return m_count; }
     WGPUQueryType type() const { return m_type; }
     id<MTLBuffer> visibilityBuffer() const { return m_visibilityBuffer; }
-    const CounterSampleBuffer& counterSampleBufferWithOffset() const;
+    const CounterSampleBuffer& counterSampleBufferWithOffset() const SWIFT_RETURNS_INDEPENDENT_VALUE;
     [[noreturn]] id<MTLCounterSampleBuffer> counterSampleBuffer() const { RELEASE_ASSERT_NOT_REACHED(); }
 
     void setCommandEncoder(CommandEncoder&) const;
     bool isDestroyed() const;
     static void destroyQuerySet(const QuerySet&);
-    static std::pair<id<MTLCounterSampleBuffer>, uint32_t> counterSampleBufferWithOffset(size_t, const Device&);
+    static CounterSampleBuffer counterSampleBufferWithOffsetForDevice(size_t, const Device&);
     static void createContainersIfNeeded();
 
 private:
